--- a/ANGULAR/libreriafront/src/app/app.component.html
+++ b/ANGULAR/libreriafront/src/app/app.component.html
@@ -51,7 +51,9 @@
     <button type="submit" class="btn btn-primary" >Buscar</button>
   </form>   
 </div>
--->
+
 <app-librocontrol></app-librocontrol>
+-->
 <router-outlet></router-outlet>
 <app-editorialcontrol></app-editorialcontrol>
+<app-autorcontrol></app-autorcontrol>
