--- a/ANGULAR/libreriafront/src/app/editorial/editorialcontrol/editorialcontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/editorial/editorialcontrol/editorialcontrol.component.html
@@ -1,1 +1,48 @@
 <p>editorialcontrol works!</p>
+<div class="formulario">
+    <form [formGroup] ="editorialForm" (ngSubmit)="guardar()">
+      
+  
+      <div class="form-group">
+        <label>Nombre editorial</label>
+        <input type="text" formControlName="nombre" class="form-control">
+      </div>
+  
+      
+      <div class="form-group">
+        <label>Direccion correspondencia</label>
+        <input type="text" formControlName="direccion_correspondencia" class="form-control">
+      </div>
+  
+      <div class="form-group">
+        <label>Telefono</label>
+        <input type="text" formControlName="telefono" class="form-control">
+      </div>
+  
+      <div class="form-group">
+        <label>Correo</label>
+        <input type="email" formControlName="correo" class="form-control">
+      </div>
+  
+      <div class="form-group">
+        <label>Maximo libros</label>
+        <input type="email" formControlName="maximo_libros" class="form-control">
+      </div>
+      
+      <button type="submit" class="btn btn-primary" >Guardar</button>
+      
+    </form>
+  </div>
+  
+  <div class="formulario">
+    <form [formGroup] ="editorialForm" (ngSubmit)="buscarEditorial()">
+      <div class="form-group">
+        <label>Buscar editorial</label>
+        <input type="text" formControlName="nombre" class="form-control">
+      </div>
+  
+      
+      <button type="submit" class="btn btn-primary" >Buscar</button>
+    </form>   
+  </div>
+  
