--- a/ANGULAR/libreriafront/src/app/libro/librocontrol/librocontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/libro/librocontrol/librocontrol.component.html
@@ -45,7 +45,7 @@
   <form [formGroup] ="libroForm" (ngSubmit)="buscarLibro()">
     <div class="form-group">
       <label>Buscar libro</label>
-      <input type="text" formControlName="nombre" class="form-control">
+      <input type="text" formControlName="titulo" class="form-control">
     </div>
 
     
