--- a/ANGULAR/libreriafront/src/app/autor/autorcontrol/autorcontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/autor/autorcontrol/autorcontrol.component.html
@@ -3,8 +3,8 @@
 
 
 <div class="formulario">
-  <form [formGroup] ="autorForm" (ngSubmit)="guardar()">
-    
+  <form [formGroup]="autorForm" (ngSubmit)="guardar()">
+
 
     <div class="form-group">
       <label>Nombre completo</label>
@@ -18,7 +18,7 @@
 
     <div class="form-group">
       <label>Fecha de nacimiento</label>
-      <input type="date" max="2006-01-01" min ="1921-01-01" formControlName="fecha_nacimiento" class="form-control">
+      <input type="date" max="2006-01-01" min="1921-01-01" formControlName="fecha_nacimiento" class="form-control">
     </div>
 
     <div class="form-group">
@@ -36,22 +36,57 @@
       <input type="email" formControlName="correo" class="form-control">
     </div>
 
-    
-    <button type="submit" class="btn btn-primary" >Guardar</button>
-    
+
+    <button type="submit" class="btn btn-primary">Guardar</button>
+
   </form>
 </div>
 
 <div class="formulario">
-  <form [formGroup] ="autorForm" (ngSubmit)="buscarAutor()">
+  <form [formGroup]="autorForm" (ngSubmit)="buscarAutor()">
     <div class="form-group">
       <label>Buscar autor</label>
       <input type="text" formControlName="nombre" class="form-control">
     </div>
 
-    
-    <button type="submit" class="btn btn-primary" >Buscar</button>
-  </form>   
+
+    <button type="submit" class="btn btn-primary">Buscar</button>
+  </form>
 </div>
 
-  
+
+
+<div class="formularioRegistro">
+  <p>Personas registradas</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Id DB</th>
+        <th># Documento</th>
+        <th>Nombre</th>
+
+        <th>fecha nacimiento</th>
+        <th>pais de nacimiento</th>
+        <th>Ciudad de nacimiento</th>
+
+        <th>correo</th>
+        <th>libros escritos</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of personas">
+        <td>{{item.id}}</td>
+        <td>{{item.d_identidad}}</td>
+        <td>{{item.nombre}}</td>
+
+        <td>{{item.fecha_nacimiento}}</td>
+        <td>{{item.pais}}</td>
+        <td>{{item.lugar_nacimiento}}</td>
+        
+        <td>{{item.correo}}</td>
+        <td>{{item.libros_escritos}}</td>
+
+      </tr>
+    </tbody>
+  </table>
+</div>
