--- a/ANGULAR/libreriafront/src/app/autor/autorcontrol/autorcontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/autor/autorcontrol/autorcontrol.component.html
@@ -54,7 +54,41 @@
   </form>
 </div>
 
+<div class="formularioRegistro">
+  <p>Buscar Persona</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Id DB</th>
+        <th># Documento</th>
+        <th>Nombre</th>
+        <th>fecha nacimiento</th>
+        <th>pais de nacimiento</th>
+        <th>Ciudad de nacimiento</th>
+        <th>correo</th>
+        <th>libros escritos</th>
+        <th>Opciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of persona">
+        <td>{{item.id}}</td>
+        <td>{{item.d_identidad}}</td>
+        <td>{{item.nombre}}</td>
 
+        <td>{{item.fecha_nacimiento}}</td>
+        <td>{{item.pais}}</td>
+        <td>{{item.lugar_nacimiento}}</td>
+        
+        <td>{{item.correo}}</td>
+        <td>{{item.libros_escritos}}</td>
+        <td>
+         
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <div class="formularioRegistro">
   <p>Personas registradas</p>
