--- a/ANGULAR/libreriafront/src/app/libro/librocontrol/librocontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/libro/librocontrol/librocontrol.component.html
@@ -52,3 +52,77 @@
     <button type="submit" class="btn btn-primary" >Buscar</button>
   </form>   
 </div>
+
+
+
+<div class="formularioRegistro">
+  <p>Buscar libro</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Titulo</th>
+        <th>Año</th>
+        <th>Nombre</th>
+        <th>Genero</th>
+        <th># de paginas</th>
+        <th>Autor</th>
+        <th>Editorial</th>
+        
+      
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of libro">
+        <td>{{item.titulo}}</td>
+        <td>{{item.ano}}</td>
+        <td>{{item.genero}}</td>
+
+        <td>{{item.paginas}}</td>
+        <td>{{item.Autor}}</td>
+        <td>{{item.my_autor}}</td>
+        
+        <td>{{item.my_editorial}}</td>
+        
+        <td>
+         
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="formularioRegistro">
+  <p>Buscar libro</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Titulo</th>
+        <th>Año</th>
+        <th>Nombre</th>
+        <th>Genero</th>
+        <th># de paginas</th>
+        <th>Autor</th>
+        <th>Editorial</th>
+        
+      
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of libros">
+        <td>{{item.titulo}}</td>
+        <td>{{item.ano}}</td>
+        <td>{{item.genero}}</td>
+
+        <td>{{item.paginas}}</td>
+        <td>{{item.Autor}}</td>
+        <td>{{item.my_autor}}</td>
+        
+        <td>{{item.my_editorial}}</td>
+        
+        <td>
+         
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
