--- a/ANGULAR/libreriafront/src/app/autor/autorcontrol/autorcontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/autor/autorcontrol/autorcontrol.component.html
@@ -51,12 +51,15 @@
 
     <div class="form-group">
       <label>Pais</label>
-      <input type="text" formControlName="pais" class="form-control">
+      <select name="pais" id="pais" formControlName="pais" class="form-control">
+        <option [ngValue]="item" *ngFor="let item of paises">{{item.nombre}}</option>
+      </select>
     </div>
-
     <div class="form-group">
-      <label>Lugar de nacimiento</label>
-      <input type="text" formControlName="lugar_nacimiento" class="form-control">
+      <label>Estado o región</label>
+      <select name="estado" id="estado" formControlName="lugar_nacimiento" class="form-control">
+        <option [ngValue]="item" *ngFor="let item of estados">{{item.nombre}}</option>
+      </select>
     </div>
 
     <div class="form-group">
