--- a/ANGULAR/libreriafront/src/app/editorial/editorialcontrol/editorialcontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/editorial/editorialcontrol/editorialcontrol.component.html
@@ -1,4 +1,4 @@
-<p>editorialcontrol works!</p>
+<h2>Editorial </h2>
 <div class="formulario">
     <form [formGroup] ="editorialForm" (ngSubmit)="guardar()">
       
@@ -49,7 +49,7 @@
 
 
   <div class="formularioRegistro">
-    <p>Buscar Persona</p>
+    <p>Buscar Editorial</p>
     <table class="table">
       <thead>
         <tr>
@@ -84,7 +84,7 @@
   </div>
   
   <div class="formularioRegistro">
-    <p>Personas registradas</p>
+    <p>Editoriales Registradas</p>
     <table class="table">
       <thead>
         <tr>
