--- a/ANGULAR/libreriafront/src/app/libro/librocontrol/librocontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/libro/librocontrol/librocontrol.component.html
@@ -1,9 +1,5 @@
-<p>librocontrol works!</p>
-<div class="sliderwx"
-data-id="entero" data-title="Entero 1 a 25:"
-data-width="250" data-type="int" data-decimal="0"
-data-min="1" data-max="25"></div>
-<br>
+<h2>Libro</h2>
+
 
 <div class="formulario">
   <form [formGroup] ="libroForm" (ngSubmit)="guardar()">
