--- a/ANGULAR/libreriafront/src/styles.css
+++ b/ANGULAR/libreriafront/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+.imagen{
+    width: 3cm;
+    height: 1cm;
+    float: right;
+}
