--- a/ANGULAR/libreriafront/src/app/autor/autorcontrol/autorcontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/autor/autorcontrol/autorcontrol.component.html
@@ -1,5 +1,5 @@
 
-<h2>Autor</h2>
+<h2>user</h2>
 
 
 <div class="formulario">
@@ -100,7 +100,7 @@
 </div>
 
 <div class="formularioRegistro">
-  <p>Buscar Autor</p>
+  <p>Buscar user</p>
   <table class="table">
     <thead>
       <tr>
@@ -109,7 +109,7 @@
         <th>Nombre</th>
         <th>fecha nacimiento</th>
         <th>correo</th>
-        <th>libros escritos</th>
+        <th>tarjetas escritos</th>
 
       </tr>
     </thead>
@@ -138,7 +138,7 @@
         <th>Nombre</th>
         <th>fecha nacimiento</th>
         <th>correo</th>
-        <th>libros escritos</th>
+        <th>tarjetas escritos</th>
         <th>Opciones</th>
       </tr>
     </thead>
