--- a/ANGULAR/libreriafront/src/app/libro/librocontrol/librocontrol.component.html
+++ b/ANGULAR/libreriafront/src/app/libro/librocontrol/librocontrol.component.html
@@ -1,4 +1,4 @@
-<h2>Libro</h2>
+<h2>tarjeta</h2>
 
 
 <div class="formulario">
@@ -128,7 +128,7 @@
         <th>Año</th>
         <th>Genero</th>
         <th># de paginas</th>
-        <th>Autor</th>
+        <th>user</th>
         <th>Editorial</th>
 
 
@@ -158,7 +158,7 @@
         <th>Año</th>
         <th>Genero</th>
         <th># de paginas</th>
-        <th>Autor</th>
+        <th>user</th>
         <th>Editorial</th>
 
 
